table, inputs without check

--- a/html/math_exs.html
+++ b/html/math_exs.html
@@ -5,21 +5,24 @@
   <meta name="author" content="sshmyrenkov">
   <meta name="description" content="Задача этой странички - потренировать свои навыки в решении арифметических задач.">
   <meta rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <link href="css.css" rel="stylesheet" type="text/css">
+  <link href="../css/css.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
   <title>Арифметические задачи</title>
 </head>
 <body>
-  <div id="id-common">
-    <h1>Павел, привет!</h1>
-    <p>Давай порешаем примеры!</p>
-    <p>Сколько примеров будем решать?</p>
-    <div id="id_count_exs"></div>
-  </div>
-  <script src="js.js"></script>
+    <a href="../main.html">home</a>
 
+    <div><p id="xFromYMessage"></p></div>
+
+    <div id="table_exs">
+      
+    </div>
+
+
+
+    <script src="../js/math_exs.js"></script>
 </body>
 
 </html>
