--- a/html/math_exs.html
+++ b/html/math_exs.html
@@ -12,7 +12,7 @@
   <title>Арифметические задачи</title>
 </head>
 <body>
-    <a href="../main.html">home</a>
+    <a href="../index.html">home</a>
 
     <div><p id="xFromYMessage"></p></div>
 
