--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Павел, привет!</h1>
       <p>Давай порешаем примеры!</p>
       <p>Сколько примеров будем решать?</p>
-      <input id="count_common_exs" type="number" placeholder="20">
+      <input id="count_common_exs" type="text" placeholder="10" maxlength="2">
       <button class="buttons" type="button" onclick="stor_count_exs()">OK</button>
 
       <p id="question_right_answers" hidden>ОК, теперь введи количество правильных ответов:</p>
